--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>Neighborhood Maps Project</title>
+    <title>Vancouver Maps Project</title>
     <!--Import Google Icon Font-->
     <link href="http://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <!--Import materialize.css-->
@@ -12,8 +12,27 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   </head>
   <body>
-    <h1> Hello Maps Project</h1>
+    <nav>
+      <div class="nav-wrapper">
+        <a href="#!" class="brand-logo"><i class="material-icons">location_on</i>VanCityMaps</a>
+        <ul class="right hide-on-med-and-down">
+          <!-- change this to link to list-view -->
+          <li><a href="badges.html"><i class="material-icons">view_module</i></a></li>
+          <li><a href="mobile.html"><i class="material-icons">more_vert</i></a></li>
+        </ul>
+      </div>
+    </nav>
+    <div class="container">
+    <div class="options-box">
+      <div>
+        <input id="search-bar" type="text" placeholder="Search the listings">
+      </div>
+    </div>
 
+    <div id="map"></div>
+  </div>
+    <script async defer src="https://maps.googleapis.com/maps/api/js?libraries=places,drawing,geometry&key=AIzaSyD8r9H4e7ZSpd61gajRZyFiozsFSsB84XE&v=3&callback=initMap">
+    </script>
     <!--Import jQuery before materialize.js-->
     <script type="text/javascript" src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
     <script type="text/javascript" src="js/materialize.min.js"></script>
