--- a/index.html
+++ b/index.html
@@ -3,40 +3,51 @@
   <head>
     <meta charset="utf-8">
     <title>Vancouver Maps Project</title>
+    <link rel="stylesheet" href="css/style.css">
+    <link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet">
+    <script src="http://code.jquery.com/jquery-1.11.3.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/knockout/3.3.0/knockout-min.js"></script>
     <!--Import Google Icon Font-->
     <link href="http://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <!--Import materialize.css-->
     <link type="text/css" rel="stylesheet" href="css/materialize.min.css"  media="screen,projection"/>
-
     <!--Let browser know website is optimized for mobile-->
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   </head>
   <body>
-    <nav>
-      <div class="nav-wrapper">
-        <a href="#!" class="brand-logo"><i class="material-icons">location_on</i>VanCityMaps</a>
+    <nav class="light-pink lighten-1" role="navigation">
+      <div class="nav-wrapper container"><a id="logo-container" href="#" class="brand-logo"><i class="material-icons">location_on</i>VanCityMap</a>
         <ul class="right hide-on-med-and-down">
-          <!-- change this to link to list-view -->
-          <li><a href="badges.html"><i class="material-icons">view_module</i></a></li>
-          <li><a href="mobile.html"><i class="material-icons">more_vert</i></a></li>
+          <li><a href="#"><i class="material-icons">view_module</i></a></li>
+          <li><a href="#"><i class="material-icons">more_vert</i></a></li>
         </ul>
+
+        <ul id="nav-mobile" class="side-nav">
+          <li><a href="#">Navbar Link</a></li>
+        </ul>
+        <a href="#" data-activates="nav-mobile" class="button-collapse"><i class="material-icons">menu</i></a>
       </div>
     </nav>
-    <div class="container">
-    <div class="options-box">
-      <div>
-        <input id="search-bar" type="text" placeholder="Search the listings">
+
+    <div class="section no-pad-bot" id="index-banner">
+      <div class="row">
+          <div class="col m3">
+          <div class="options-box">
+            <div>
+              <input id="search-bar" type="text" placeholder="Search the listings">
+            </div>
+          </div>
+        </div>
+        <div class="col m9">
+          <div id="map"></div>
+        </div>
       </div>
     </div>
 
-    <div id="map"></div>
-  </div>
+    <script type="text/javascript" src="js/app.js"></script>
     <script async defer src="https://maps.googleapis.com/maps/api/js?libraries=places,drawing,geometry&key=AIzaSyD8r9H4e7ZSpd61gajRZyFiozsFSsB84XE&v=3&callback=initMap">
     </script>
-    <!--Import jQuery before materialize.js-->
-    <script type="text/javascript" src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
     <script type="text/javascript" src="js/materialize.min.js"></script>
     <script src="js/knockout.min.js"></script>
-    <script src="js/app.js"></script>
   </body>
 </html>
