fixed foursquare functions so markers show up on map, removed Yelp for now

--- a/index.html
+++ b/index.html
@@ -34,7 +34,11 @@
           <div class="col m3">
           <div class="options-box">
             <div>
-              <input id="search-bar" type="text" placeholder="Search the listings">
+              <input id="search-bar" type="text" placeholder="Search Foursquare, ex: 'coffee'">
+              <input id="show-foursquare" type="button" value="Show Foursquare">
+            </div>
+            <div>
+              <input id="filter-bar" type="text" placeholder="Filter the listings">
             </div>
           </div>
         </div>
