Add search bar functionality so user can search for terms and foursquare markers are returned

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
           <div class="options-box">
             <div>
               <input id="search-bar" type="text" placeholder="Search Foursquare, ex: 'coffee'">
-              <input id="show-foursquare" type="button" value="Show Foursquare">
+              <input id="show-foursquare" class="btn btn-primary" type="button" value="Search">
             </div>
             <div>
               <input id="filter-bar" type="text" placeholder="Filter the listings">
