--- a/index.html
+++ b/index.html
@@ -38,11 +38,11 @@
             <div layout="column" style="height:510px; color: #e0e0e0 grey lighten-2; overflow:auto">
               <div layout="row" flex="none" layout-margin style="color: light-blue">
                 <input id="search-bar" data-bind="value: userQuery, valueUpdate:'keypress'" type="text" placeholder="Search Foursquare, ex: 'coffee'">
-                <input id="show-foursquare" data-bind="click: userSearch, enable:userQuery" class="btn btn-primary" type="button" value="Search">
+                <input id="show-foursquare" data-bind="click: userSearch, enable:userQuery" class="btn btn-primary #1de9b6 teal accent-3" type="button" value="Search">
               </div>
               <div layout="row" flex="none" layout-margin style="color:light-blue">
-                <input id="filter-bar" data-bind="value: placeFilter, valueUpdate: 'afterkeydown', event: {keyup: filterPlaces, click: clickOnFilterBar }" type="text" placeholder="Filter places">
-                <input id="filter-button" data-bind="click: filterPlaces, enable: placeFilter" class="btn btn-info" type="button" value="Filter">
+                <input id="filter-bar" data-bind="value: placeFilter, valueUpdate: 'afterkeydown', event: { click: clickOnFilterBar }" type="text" placeholder="Filter places">
+                <input id="filter-button" data-bind="click: filterPlaces, enable: placeFilter" class="btn btn-primary #4dd0e1 cyan lighten-2" type="button" value="Filter&nbsp&nbsp">
               </div>
               <div layout="row" flex="none" layout-margin style="color:light-blue">
                 <div id="place-error" data-bind="visible: showFilterErrorList"></div>
@@ -53,9 +53,7 @@
                       <strong><span class="place-name" data-bind="text: name"></span></strong>
                       <div>Rating: <span data-bind="text: rating"></span></div>
                       <div>Check-ins: <span data-bind="text: checkinsCount"></span></div>
-                      <div>Price: <span data-bind="text: price"></span></div>
                       <div>Address: <span data-bind="text: address"></span></div>
-                      <div>Open now: <span data-bind="text: isOpen"></span></div>
                       <span><a data-bind="attr: {href: url}" target=\"_blank\">Website</a></span>
                     </li>
                 </ul>
