--- a/index.html
+++ b/index.html
@@ -57,15 +57,17 @@
                 </ul>
                 <ul data-bind="visible: showFilterList, foreach: places">
                     <li data-bind="visible: showPlaceDetail, event: {mouseover: $parent.highlightMarker, mouseout: $parent.unhighlightMarker}">
-                      <div><span class="venue-name" data-bind="text: name"></span>&nbsp&nbsp<span data-bind="text: price"></span>&nbsp<span data-bind="text: rating"></span>&nbsp<span><i class="tiny material-icons">star</i></span></div>
-                      <span><img width="90" height="90" data-bind="attr:{src: photoUrl}" /></span>
-                      <div>Check-ins: <span data-bind="text: checkinsCount"></span></div>
+                      <div><span class="venue-name" data-bind="text: name"></span>&nbsp&nbsp<span data-bind="text: price"></span>&nbsp<span data-bind="text: rating"></span>&nbsp<span><i class="material-icons">star</i></span></div>
+                      <span><img width="120" height="100" data-bind="attr:{src: photoUrl}" /></span>
+                      <div><i class="material-icons">person_pin</i> &nbsp<span data-bind="text: checkinsCount"></span></div>
+                      <div><i class="material-icons">thumb_up</i> &nbsp<span data-bind="text: likes"></span></div>
                       <div><i><span data-bind="text: description"></span></i></div>
-                      <div>Category: <span data-bind="text: categoryName"></span></div>
-                      <div>Address: <span data-bind="text: address"></span></div>
-                      <div>Phone: <span data-bind="text: contact"></span></div>
-                      <div><a data-bind="attr: {href: url}" target=\"_blank\">Website</a></div>
-                      <div><a data-bind="attr: {href: urlFoursquare}" target=\"_blank\">Go to place on Foursquare</a></div>
+                      <div><i class="material-icons">local_dining</i> &nbsp<span data-bind="text: categoryName"></span></div>
+                      <div><i class="material-icons">location_on</i> &nbsp<span data-bind="text: address"></span></div>
+                      <div><i class="material-icons">today</i> &nbsp<span data-bind="text: hoursStatus"></span></div>
+                      <div><i class="material-icons">phone</i> &nbsp<span data-bind="text: contact"></span></div>
+                      <div><i class="material-icons">link</i> &nbsp<a data-bind="attr: {href: url}" target=\"_blank\">Website</a></div>
+                      <div><i class="material-icons">rate_review</i> &nbsp<a data-bind="attr: {href: urlFoursquare}" target=\"_blank\">View place on Foursquare</a></div>
                     </li>
                 </ul>
 
