Remove console.logs, fix indentation, add styles and responsiveness

--- a/index.html
+++ b/index.html
@@ -18,10 +18,8 @@
   </head>
   <body>
     <nav class="light-pink lighten-1" role="navigation">
-      <div class="nav-wrapper container"><a id="logo-container" href="#" class="brand-logo"><i class="material-icons">location_on</i>VanCityMap</a>
+      <div class="nav-wrapper container"><a id="logo-container" href="#" class="brand-logo"><i class="material-icons">location_on</i>FoodExplorer</a>
         <ul class="right hide-on-med-and-down">
-          <li><a href="#"><i class="material-icons">view_module</i></a></li>
-          <li><a href="#"><i class="material-icons">more_vert</i></a></li>
         </ul>
 
         <ul id="nav-mobile" class="side-nav">
@@ -76,7 +74,7 @@
           </md-content>
         </div>
 
-        <div class="col m9">
+        <div style="height:100%; width: 100%;" class="col m9">
           <div id="map"></div>
         </div>
       </div>
