Fix error handling for Foursquare

--- a/index.html
+++ b/index.html
@@ -34,8 +34,8 @@
           <div id="options-box" class="col m3">
             <!-- making box scroll -->
           <md-content>
-            <div layout="column" style="height:510px; color: #e0e0e0 grey lighten-2; overflow:auto">
-              <div layout="row" flex="none" layout-margin style="color: light-blue">
+            <div layout="column" style="height:510px; overflow:auto">
+              <div layout="row" flex="none" layout-margin >
                 <input id="search-bar" data-bind="textInput: userQuery, event: { click: clickOnFilterBar }" type="text" placeholder="Search Foursquare, ex: 'coffee'">
 
                 <input id="show-foursquare" data-bind="click: userSearch, enable:userQuery" class="btn btn-primary #1de9b6 teal accent-3" type="button" value="Search">
@@ -43,8 +43,8 @@
               <div layout="row" flex="none" layout-margin >
                 <input placeholder="Filter results by name" id="filter-bar" data-bind="value: input, valueUpdate: 'afterkeydown', event: {keyup: filterPlaces, click: clickOnFilterBar}" autocomplete="off">
               </div>
-              <div layout="row" flex="none" layout-margin style="color:light-blue">
-                <div id="fsq-errors" data-bind="visible: showFilterErrorList"></div>
+              <div layout="row" flex="none" layout-margin >
+              <strong><div id="fsq-errors" data-bind="visible: showFilterErrorList, text: error"></div></strong>
              </div>
 
              <div layout="row" flex="none">
