--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Vancouver Maps Project</title>
     <link rel="stylesheet" href="css/style.css">
     <link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet">
-    <script src="http://code.jquery.com/jquery-1.11.3.min.js"></script>
+    <script src="js/jquery-3.1.1.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/knockout/3.3.0/knockout-min.js"></script>
     <!--Import Google Icon Font-->
     <link href="http://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
@@ -46,7 +46,6 @@
               <div layout="row" flex="none" layout-margin >
               <strong><div id="fsq-errors" data-bind="visible: showFilterErrorList, text: error"></div></strong>
              </div>
-
              <div layout="row" flex="none">
                 <ul data-bind="visible: showFilterList, foreach:places">
                     <li data-bind="visible: showPlace, event: {mouseover: $parent.highlightMarker, mouseout: $parent.unhighlightMarker}">
@@ -66,11 +65,11 @@
       </div>
 
 
-    <script type="text/javascript" src="js/app.js"></script>
-    <script async defer src="https://maps.googleapis.com/maps/api/js?libraries=places,drawing,geometry&key=AIzaSyD8r9H4e7ZSpd61gajRZyFiozsFSsB84XE&v=3&callback=initMap">
-    </script>
-    <script type="text/javascript" src="js/materialize.min.js"></script>
+    <script src="js/app.js"></script>
+    <script src="js/materialize.min.js"></script>
     <script src="js/knockout.min.js"></script>
     <script src="js/underscore.js"></script>
+    <script src="https://maps.googleapis.com/maps/api/js?libraries=places,drawing,geometry&key=AIzaSyD8r9H4e7ZSpd61gajRZyFiozsFSsB84XE&v=3&callback=initMap" async defer onerror="mapError()">
+    </script>
   </body>
 </html>
