--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>Vancouver Maps Project</title>
+    <title>Food Explorer</title>
     <link rel="stylesheet" href="css/style.css">
     <link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet">
     <script src="js/jquery-3.1.1.min.js"></script>
